<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="open_terminal"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_terminal"
        android:shortcutLongLabel="@string/shortcut_terminal_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="${applicationId}"
            android:targetClass="com.nous.hermes.mobile.TerminalActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="open_chat"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_chat"
        android:shortcutLongLabel="@string/shortcut_chat_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="${applicationId}"
            android:targetClass="com.nous.hermes.mobile.ChatActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="open_models"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_models"
        android:shortcutLongLabel="@string/shortcut_models_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="${applicationId}"
            android:targetClass="com.nous.hermes.mobile.ModelManagementActivity" />
    </shortcut>
</shortcuts>
