<?xml version="1.0" encoding="utf-8"?>
<!-- Bottom navigation menu: 4 tabs (Install / Dashboard / Logs / Settings).
     Matches openclaw-termux's multi-screen navigation pattern. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_install"
        android:icon="@drawable/ic_nav_install"
        android:title="@string/tab_install" />
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/tab_dashboard" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_nav_logs"
        android:title="@string/tab_logs" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/tab_settings" />
</menu>
